Tue Dec 30 16:03:45 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/resolv.rb (Resolv::DNS::Name): names with different dots
	  should be different.

Tue Dec 30 13:16:56 2014  Martin Duerst  <bernhard+git@lsmod.de>

	* lib/uri/common.rb: Initialize HTML5ASCIIINCOMPAT to empty Array
	  to avoid error during bootstrap when encodings are not yet defined.
	  [Bug #10678]

Tue Dec 30 09:29:26 2014  Bernhard M. Wiedemann  <bernhard+git@lsmod.de>

	* ext/dbm/dbm.c (Init_dbm): [DOC] as UNIX permissions are octal
	  numbers, needs to be prefixed by 0.  [Fix GH-800]

Tue Dec 30 08:57:39 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/unicode_normalize.rb: typo fix. [ci skip]
	  [ruby-dev:48794][misc #10675]

Mon Dec 29 19:38:01 2014  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* version.h (RUBY_VERSION): 2.3.0 development has started.

Mon Dec 29 18:58:46 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (unescape_nonascii): append escape sequence as-is not
	  unescaped character, to get rid of unexpected meta-character.
	  [ruby-core:67193] [Bug #10670]

Mon Dec 29 14:27:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/syntax/literals.rdoc (Symbols): now Symbols created by
	  interpolation can be garbage collected.  patch by Yihang Ho in
	  [ruby-core:67194].  [Bug #10671]

Mon Dec 29 11:18:17 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_variable_get): fix dynamic symbol keys.
	  rb_check_id() returns non-zero only for static symbols, whereas
	  thread local variable keys can be dynamic symbols.
	  [ruby-core:67185] [Bug #10667]

Mon Dec 29 10:37:27 2014  Thiago Lewin  <thiago_lewin@yahoo.com.br>

	* io.c (rb_f_select): [DOC] workaround for YARD doc.  [Fix GH-799]

	* process.c (proc_detach): [DOC] fix missing closing parenthesis.
	  [Fix GH-799]

Mon Dec 29 07:27:23 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/json, test/json: merge JSON HEAD(17fe8e7)
	  https://github.com/flori/json/compare/v1.8.1...17fe8e7
