@@ -1236,8 +1236,8 @@ class Resolv
 
       def ==(other) # :nodoc:
         return false unless Name === other
-        return @labels.join('.') == other.to_a.join('.') &&
-          @absolute == other.absolute?
+        return false unless @absolute == other.absolute?
+        return @labels.join('.').casecmp(other.to_a.join('.')).zero?
       end
 
       alias eql? == # :nodoc:
